log
Fri, Apr  8, 2022  4:03:25 PM: 
 tests:  0|6
total_score: 0/70
e94c888
Fri, Apr  8, 2022  4:13:39 PM: 
 hashmap.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function 'insertMap':
hashmap.c:43:11: error: unused variable 'new' [-Werror=unused-variable]
     Pair *new = (Pair *) calloc(sizeof(Pair), 1);
           ^~~
hashmap.c: In function 'createMap':
hashmap.c:56:18: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
     map->buckets = (Pair *) malloc(sizeof(Pair) * capacity);
                  ^
hashmap.c:58:18: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
     map->current = NULL;
                  ^
cc1.exe: all warnings being treated as errors
Compilation failed
499ef04
Fri, Apr  8, 2022  4:15:05 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function 'insertMap':
hashmap.c:43:11: error: unused variable 'new' [-Werror=unused-variable]
     Pair *new = (Pair *) calloc(sizeof(Pair), 1);
           ^~~
hashmap.c: In function 'createMap':
hashmap.c:56:18: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
     map->buckets = (Pair *) malloc(sizeof(Pair) * capacity);
                  ^
cc1.exe: all warnings being treated as errors
Compilation failed
4c18ecc
Fri, Apr  8, 2022  4:15:33 PM: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function 'createMap':
hashmap.c:55:18: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
     map->buckets = (Pair *) malloc(sizeof(Pair) * capacity);
                  ^
cc1.exe: all warnings being treated as errors
Compilation failed
1dfa93d
Fri, Apr  8, 2022  4:16:11 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
58850e3
Fri, Apr  8, 2022  4:17:04 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
864acbe
Fri, Apr  8, 2022  4:19:37 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
60f2dd0
Fri, Apr  8, 2022  4:21:06 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
27b846d
Fri, Apr  8, 2022  4:31:15 PM: 
 hashmap.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
In file included from test.c:4:0:
hashmap.c: In function 'insertMap':
hashmap.c:43:11: error: unused variable 'new' [-Werror=unused-variable]
     Pair *new = createPair(key, value);
           ^~~
cc1.exe: all warnings being treated as errors
Compilation failed
0b47ebd
Fri, Apr  8, 2022  4:31:59 PM: 
 hashmap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
6497434
Fri, Apr  8, 2022  4:34:02 PM: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|5
total_score: 10/70
8176ff2
Fri, Apr  8, 2022  4:37:30 PM: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|5
total_score: 10/70
d50730e
Fri, Apr  8, 2022  4:40:28 PM: 
 hashmap.c | 10 ++++------
 1 file changed, 4 insertions(+), 6 deletions(-)
 tests:  0|0
bb75d38
Fri, Apr  8, 2022  4:41:53 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
44a3f0c
Fri, Apr  8, 2022  4:43:00 PM: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function 'insertMap':
hashmap.c:44:11: error: unused variable 'new' [-Werror=unused-variable]
     Pair *new = createPair(key, value);
           ^~~
cc1.exe: all warnings being treated as errors
Compilation failed
d9bf6e3
Fri, Apr  8, 2022  4:45:14 PM: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
0ccb927
Fri, Apr  8, 2022  4:47:20 PM: 
 hashmap.c | 14 ++++++++------
 1 file changed, 8 insertions(+), 6 deletions(-)
 tests:  1|5
total_score: 10/70
06cc618
Fri, Apr  8, 2022  4:48:01 PM: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|5
total_score: 20/70
a3f218a
Fri, Apr  8, 2022  4:52:26 PM: 
 hashmap.c | 10 ++++------
 1 file changed, 4 insertions(+), 6 deletions(-)
 tests:  0|0
6035e33
Fri, Apr  8, 2022  4:55:16 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
4bad819
Fri, Apr  8, 2022  4:58:29 PM: 
 hashmap.c | 11 +++++------
 1 file changed, 5 insertions(+), 6 deletions(-)
 tests:  0|0
7ea28d3
Fri, Apr  8, 2022  5:03:01 PM: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
841f564
Fri, Apr  8, 2022  5:03:50 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function 'insertMap':
hashmap.c:47:14: error: format '%d' expects argument of type 'int', but argument 2 has type 'long int' [-Werror=format=]
     printf("%d", i);
              ^
cc1.exe: all warnings being treated as errors
Compilation failed
ab7b599
